# backend/app/models/__init__.py
@@ -1,0 +1,6 @@
+from app.models.appointment import Appointment
+from app.models.client import Client
+from app.models.pet import Pet
+from app.models.user import User
+
+__all__ = ['User', 'Client', 'Pet', 'Appointment']
